--- a/themes/base/_panels.sass
+++ b/themes/base/_panels.sass
@@ -21,8 +21,9 @@
 
 .roomListItem
   border: none !important
+  .stat,
   .songName
-    color: $subtle !important
+    color: $text !important
   .stat .icon
     filter: grayscale(1)
   .needed .count
