--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -16,15 +16,16 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 .tab-pane a,
 #pmWindows a,
 #ts_window h4,
-#ts_window .ts_credits a,
+#topBG #content a,
 .current-song .details,
+#ts_window .ts_credits a,
+.lobby-panel .buddyRoomName,
+.roomListItem .needed .count,
+#ts_hotbar input:checked:after,
+#ts_window input:checked:after,
 .tab-item:not(.selected):hover .tab-title,
 .chat .message:not(.stat) .subject:hover,
 .chat .message:not(.stat) .speaker:hover
-  color: $accent-text !important
-
-#ts_hotbar input:checked:after,
-#ts_window input:checked:after
   color: $accent-text !important
 
 .chat .message.mention
@@ -48,18 +49,21 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 .header-logo, 
 .song-details,
 .favorite-star.favorited, 
+.buddyListRoom .joinRoomButton,
 #privateChatIcon.open .chatIcon
   filter: $others
 
 .tab-item:not(.selected):hover .tab-icon
   filter: $grayed
 
+#create-room,
 #buddyListHeader,
 .tab-item:active, 
 .tab-item.selected,
 #ts_tabs div.active,
 .pmGreyTop.new-message,
 #settings .option:hover,
+.roomListItem .listenNow,
 button.tt-button.primary.small.inset,
 .options-menu .options .option:hover,
 .floating-menu .option:not(.split-option):not(.disabled):hover
