--- a/themes/midnight.sass
+++ b/themes/midnight.sass
@@ -28,8 +28,11 @@ $active-tab-text: #ffffff
 
 #ts_upload,
 .chat-bar .chatsound,
+#settings .settings-button,
+.roomListItem .needed .icon,
 #playlist .search .mag-glass,
+.room-search-input .mag-glass,
 #playlist-display .down-arrow,
 .tab-item:not(.selected) .tab-icon,
-#playlist-display .playlist-queue-inset
-  filter: contrast(0) sepia(1) hue-rotate(180deg) saturate(4) !important
+#playlist-display .playlist-queue-inset,
+  filter: sepia(1) hue-rotate(180deg) saturate(4) !important
