Style profile border.

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -2,6 +2,7 @@ $accent-text: mix(#ffffff, $accent, 40%) !default
 $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 
 #ts_slider,
+.overlay .modal,
 .score.scoregood,
 #settings .option.selected,
 .floating-menu .option.active,
