Add styling to more profile, lobby items.

--- a/themes/base/_panels.sass
+++ b/themes/base/_panels.sass
@@ -84,7 +84,9 @@
   left: 36px
 
 #chat-input,
+.overlay textarea,
 #song-search-input,
+.overlay input.text,
 .room-search-input input
   @extend %text-input
   &::placeholder
