--- a/themes/base/_popups.sass
+++ b/themes/base/_popups.sass
@@ -65,6 +65,8 @@
 
 .overlay .modal
   background: $active-tab-bg !important
+  .title 
+    color: $active-tab-text !important
   .content-container
     background: $bg-main !important
     .content
