--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -18,6 +18,8 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 #pmWindows a,
 #ts_window h4,
 #topBG #content a,
+#myInfo .myName:hover,
+#myInfo .myFans:hover,
 .current-song .details,
 #ts_window .ts_credits a,
 .lobby-panel .buddyRoomName,
@@ -26,7 +28,9 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 #ts_window input:checked:after,
 .tab-item:not(.selected):hover .tab-title,
 .chat .message:not(.stat) .subject:hover,
-.chat .message:not(.stat) .speaker:hover
+.chat .message:not(.stat) .speaker:hover,
+.fans .stat-number:not(.disabled):hover, 
+.fanofs .stat-number:not(.disabled):hover
   color: $accent-text !important
 
 .chat .message.mention
@@ -58,6 +62,7 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
   filter: $grayed
 
 #create-room,
+.modal .title,
 #buddyListHeader,
 .tab-item:active, 
 .tab-item.selected,
