Style ttStats link.

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -18,6 +18,7 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 #pmWindows a,
 #ts_window h4,
 #topBG #content a,
+.profile .statslink a,
 #myInfo .myName:hover,
 #myInfo .myFans:hover,
 .current-song .details,
