--- a/themes/base/_content.sass
+++ b/themes/base/_content.sass
@@ -10,8 +10,10 @@ body,
 .tab-pane a,
 #pmWindows a,
 #topBG #content a,
+.profile .statslink a
   color: $accent !important
   text-decoration: none !important
+  background: transparent !important
   border-bottom: 1px dotted !important
 
 #mainNav li:not(.selected) .nav-text,
