--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -109,6 +109,9 @@
 .chat .message.stat:not(:hover)
   opacity: 0.5
 
+.section.statslink
+  text-align: center !important
+
 #playlist-display em
   top: 0
   right: 25px
