--- a/themes/base/_content.sass
+++ b/themes/base/_content.sass
@@ -24,6 +24,17 @@ body,
 #mainNav li.selected
   background: $bg-alt !important
 
+.mini-room-view
+  background-color: transparent !important
+
+.miniplayer .songboard
+  filter: grayscale(1)
+
+.song-playing .songboard-time,
+.song-playing .songboard-time-left,
+.song-playing .songboard-progress-bar
+  bottom: -59px
+
 .room-tab
   .room-name
     color: $text !important
