--- a/themes/night.sass
+++ b/themes/night.sass
@@ -1,27 +1,9 @@
-$dark-theme: true
+$color-bg: #141414 // dark green
 
-$text:   #b9b9b9
-$subtle: darken($text, 15%)
-
-$bg-main: #141414
-$bg-alt:  lighten($bg-main, 2%)
-$border:  lighten($bg-main, 4%)
-
-$bg-panel: lighten($border, 4%)
-$border-p: lighten($border, 8%)
-
-$bg-input:   $bg-panel
-$text-input: $text
-
-$accent: #e1bb22 // gold - mentions
-$action: #e23434 // red - dj removal, etc
-$onsnag: #f16e98 // pink
-$onjoin: #40c340 // green
-$onleft: $action // red
-$upvote: $onjoin // green
-$dnvote: $action // red
-
-$active-tab-bg:   $accent // chat, queue, room
-$active-tab-text: #ffffff
+$color-main: #bd9e0e // turntable gold
+$color-snag: #b74e88 // pink
+$color-join: #4a9a4d // green
+$color-left: #a73c3c // red
+$color-mods: #a73c3c // red (removed from decks, etc)
 
 @import "base/theme"
