--- a/themes/midnight.sass
+++ b/themes/midnight.sass
@@ -1,38 +1,9 @@
-$dark-theme: true
+$color-bg: #091b35 // dark green
 
-$text:   #e2eeff
-$subtle: darken($text, 15%)
-
-$bg-main: #091b35
-$bg-alt:  lighten($bg-main, 2%)
-$border:  lighten($bg-main, 4%)
-
-$bg-panel: lighten($border, 4%)
-$border-p: lighten($border, 8%)
-
-$bg-input:   $bg-panel
-$text-input: $text
-
-$accent: #e1bb22 // gold - mentions
-$action: #e65656 // red - dj removal, etc
-$onsnag: #f16e98 // pink
-$onjoin: #7af178 // green
-$onleft: $action // red
-$upvote: $onjoin // green
-$dnvote: $action // red
-
-$active-tab-bg:   $accent // chat, queue, room
-$active-tab-text: #ffffff
+$color-main: #bd9e0e // turntable gold
+$color-snag: #b74e88 // pink
+$color-join: #4a9a4d // green
+$color-left: #a73c3c // red
+$color-mods: #a73c3c // red (removed from decks, etc)
 
 @import "base/theme"
-
-#ts_upload,
-.chat-bar .chatsound,
-#settings .settings-button,
-.roomListItem .needed .icon,
-#playlist .search .mag-glass,
-.room-search-input .mag-glass,
-#playlist-display .down-arrow,
-.tab-item:not(.selected) .tab-icon,
-#playlist-display .playlist-queue-inset,
-  filter: sepia(1) hue-rotate(180deg) saturate(4) !important
