--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -1,49 +1,66 @@
-$accent-text: mix(#ffffff, $accent, 40%) !default
-$bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
+@import "../mixins/recolor"
 
-#ts_slider,
-.overlay .modal,
-.score.scoregood,
-#settings .option.selected,
-.floating-menu .option.active,
-.floating-menu .option.selected
-  background: $accent !important
+$text: mix(#ffffff, $accent, 40%) !default
+$fade: linear-gradient(to bottom, $accent, darken($accent, 5%)) !default
 
-.mini-djs .mini-dj.active .avatar-head
-  box-shadow: inset 0 0 0 2px $accent !important
-
-.song .progress,
-.chat .message.mention
-  background: rgba($accent, 0.2) !important
-
-.ts_menu,
-.tab-pane a,
+#overlay a,
 #pmWindows a,
 #ts_window h4,
 #topBG #content a,
-.profile .statslink a,
-#myInfo .myName:hover,
-#myInfo .myFans:hover,
-.current-song .details,
+#ts_window .ts_menu,
+#ts_hotbar .ts_menu,
+#maindiv .tabbed-panel a,
 #ts_window .ts_credits a,
-.mini-room-current-dj-name,
-.lobby-panel .buddyRoomName,
-.roomListItem .needed .count,
+.buddyListRoom .buddyRoomName,
 #ts_hotbar input:checked:after,
 #ts_window input:checked:after,
-.tab-item:not(.selected):hover .tab-title,
 .chat .message:not(.stat) .subject:hover,
 .chat .message:not(.stat) .speaker:hover,
 .fans .stat-number:not(.disabled):hover, 
-.fanofs .stat-number:not(.disabled):hover
-  color: $accent-text !important
+.fanofs .stat-number:not(.disabled):hover,
+#buddyList #buddyListHeader .myName:hover,
+#buddyList #buddyListHeader .myFans:hover,
+#topBG .roomListItem .roomDJs.needed 
+  color: $text 
+
+#topBG .roomListItem .roomDJs.needed .icon
+  @include recolor($accent)
 
 .chat .message.mention
-  border-right-color: $accent !important
+  border-right: 5px solid $accent
 
-#buddyListTitle,
-#buddyListHeader
-  border-color: $accent !important
+.chat .message.mention,
+#songs .song-list .song .progress
+  background: rgba($accent, 0.2)
+
+.overlay .modal,
+.overlay .modal .title,
+#maindiv .song-list .song .scoregood
+  background-color: $accent
+
+#ts_slider
+  background: $accent
+
+#topBG #create-room,
+#ts_tabs div.active,
+#settings .option:hover,
+#settings .option.selected,
+.options-menu .option:hover,
+.options-menu .option.active,
+#buddyListMain #buddyListHeader,
+.tabbed-panel .tab-item:active, 
+.tabbed-panel .tab-item.selected,
+.floating-menu .option.active,
+.floating-menu .option.selected,
+.floating-menu .option:not(.split-option):not(.disabled):hover,
+.modal button.submit,
+.modal button.submit:hover,
+button.tt-button.primary,
+button.tt-button.primary:hover
+  background-image: $fade
+
+.mini-djs .mini-dj.active .avatar-head
+  box-shadow: inset 0 0 0 2px $accent
 
 .lame-button
   filter: grayscale(1) !important
@@ -56,9 +73,9 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 
 .become-dj, 
 .invite-dj,
-.header-logo, 
 .song-details,
 .songboard-add,
+.header-bar .header-logo, 
 .mini-djs .invite-dj-btn,
 .mini-djs .become-dj-btn,
 .favorite-star.favorited, 
@@ -68,20 +85,3 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 
 .tab-item:not(.selected):hover .tab-icon
   filter: $grayed
-
-#create-room,
-.modal .title,
-#buddyListHeader,
-.tab-item:active, 
-.tab-item.selected,
-#ts_tabs div.active,
-.pmGreyTop.new-message,
-#settings .option:hover,
-.roomListItem .listenNow,
-button.tt-button.primary.small.inset,
-.options-menu .options .option:hover,
-.floating-menu .option:not(.split-option):not(.disabled):hover
-  box-shadow: none !important
-  background-image: $bg-gradient !important
-
-
