--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -217,5 +217,6 @@
 
 // hide the audience/video
 .ts_hide_videos .screen-content,
+.ts_hide_bubbles .speech-bubble,
 .ts_hide_audience #room-view > canvas:nth-child(4)
   display: none !important
