Finish styling new options panel.

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -5,15 +5,14 @@ $fade: linear-gradient(to bottom, $accent, darken($accent, 5%)) !default
 
 #overlay a,
 #pmWindows a,
-#ts_window h4,
+#turnStyles h4,
 #topBG #content a,
-#ts_window .ts_menu,
-#ts_hotbar .ts_menu,
+#turnStyles #ts_menu,
+#turnStyles #ts_close,
 #maindiv .tabbed-panel a,
-#ts_window .ts_credits a,
+#turnStyles .ts_credits a,
 .buddyListRoom .buddyRoomName,
-#ts_hotbar input:checked:after,
-#ts_window input:checked:after,
+#turnStyles input:checked:after,
 .chat .message:not(.stat) .subject:hover,
 .chat .message:not(.stat) .speaker:hover,
 .fans .stat-number:not(.disabled):hover, 
