--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -113,6 +113,11 @@
   h4:not(:first-of-type)
     margin-top: 5px
 
+  textarea
+    font-size: 15px
+    font-family: monospace
+    text-transform: none !important
+
 .ts_toggle,
 .ts_inputs
   margin: 0 5px 5px 0
