--- a/themes/base/_tspanel.sass
+++ b/themes/base/_tspanel.sass
@@ -1,15 +1,18 @@
-#ts_hotbar, 
-#ts_window
+#turnStyles
   @extend %content-main
 
   input:not(:checked):after
     color: $color-bg-0
 
-#ts_tabs div,
-#ts_hotbar label,
-#ts_window label,
-#ts_window select, 
-#ts_window option
+  small, h5
+    color: $color-subtle
+
+  select
+    border-color: $color-bg-4
+
+.ts_toggle,
+.ts_inputs,
+#ts_tabs div
   color: $color-text 
   background: $color-bg-3
 
@@ -18,12 +21,6 @@
 
 #ts_tabs .active
   color: $color-bg-0
-
-#ts_window
-  small, h5
-    color: $color-subtle
-  select
-    border-color: $color-bg-4
 
 #ts_volume #ts_slider::-moz-range-thumb
   background: $color-text
