Make pm header icons more visible.

--- a/themes/base/_userchat.sass
+++ b/themes/base/_userchat.sass
@@ -20,7 +20,7 @@
   .pmClose,
   .pmHeader .nib
     opacity: 1
-    @include recolor($color-bg-0)
+    @include recolor($color-subtle)
 
   .pmWindowIcon:hover
     background-color: transparent
