Add log viewer to room tab.

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -150,6 +150,12 @@
     &:checked:after
       color: gold  
 
+#ts_logs
+  max-height: 300px
+  margin-bottom: 10px
+  padding: 0 5px 0 20px
+  font-family: monospace
+
 // turntable styling defaults
 #room-view
   background: #000000
