Add Afk Toggle/Message

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -54,10 +54,6 @@
     font-size: 0.8em
     text-transform: uppercase
 
-  #ts_apply:hover
-    opacity: 1
-    cursor: pointer
-
   .ts_credits
     small
       margin-right: 5px
@@ -82,6 +78,14 @@
   border-radius: 5px
   background: #444444
   text-transform: uppercase
+
+input.ts_inputs,
+button.ts_inputs
+  margin: 3px 5px 5px 0
+  padding: 5px 10px 6px
+
+input.ts_inputs
+  text-transform: none !important
 
 #ts_tabs
   margin: -5px 0
