Upgrade and add toggle for room tab logging.

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -155,9 +155,19 @@ input.ts_inputs
       color: gold  
 
 #ts_logs
+  display: none
+  font-size: 0.85em
+  font-weight: normal
   margin-bottom: 40px
   padding: 0 5px 0 20px
   font-family: monospace
+
+  span
+    display: block
+    padding-left: 10px
+
+.ts_has_logging #ts_logs
+  display: block
 
 // turntable styling defaults
 #room-view
