Scrollable logs, auto-scroll to bottom.

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -170,12 +170,15 @@ input.ts_inputs
       color: gold  
 
 #ts_logs
+  height: 200px
   display: none
+  overflow: auto
   font-size: 0.85em
   font-weight: normal
   margin-bottom: 40px
-  padding: 0 5px 0 20px
   font-family: monospace
+  padding: 10px 5px 10px 20px
+  background: rgba(0,0,0,0.2)
 
   span
     display: block
