Better cross-browser toggle indicators.

--- a/themes/base/_accents.sass
+++ b/themes/base/_accents.sass
@@ -9,7 +9,7 @@ $fade: linear-gradient(to bottom, $color-main, darken($color-main, 5%))
 #maindiv .tabbed-panel a,
 #turnStyles .ts_credits a,
 .buddyListRoom .buddyRoomName,
-#turnStyles input:checked:after,
+#turnStyles input:checked + span,
 .chat .message:not(.stat) .subject:hover,
 .chat .message:not(.stat) .speaker:hover,
 .fans .stat-number:not(.disabled):hover, 
