--- a/themes/base/_tspanel.sass
+++ b/themes/base/_tspanel.sass
@@ -1,7 +1,7 @@
 #turnStyles
   @extend %content-main
 
-  input:not(:checked):after
+  input:not(:checked) + span
     color: $color-bg-0
 
   small, h5
