--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -12,7 +12,7 @@ $fade: linear-gradient(to bottom, $accent, darken($accent, 5%)) !default
 #maindiv .tabbed-panel a,
 #turnStyles .ts_credits a,
 .buddyListRoom .buddyRoomName,
-#turnStyles input:checked:after,
+#turnStyles input:checked + span,
 .chat .message:not(.stat) .subject:hover,
 .chat .message:not(.stat) .speaker:hover,
 .fans .stat-number:not(.disabled):hover, 
