Fine tune menu toggle.

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -41,11 +41,16 @@
 
     .open,
     .close
-      font-size: 1em
       display: inline-block
+      vertical-align: bottom
+
+    .open
+      font-size: 1.2em
+      font-weight: bold
+      padding-right: 1px 
 
     .close
-      padding: 1px 1px 0 1px
+      font-size: 1em
 
   .ts_menu_toggle
     color: gold
