Better button/non-toggle spacing.

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -154,6 +154,7 @@ input.ts_inputs
   select,
   input[type="text"]
     padding: 6px 10px
+    margin: 0 5px 6px 0
     width: calc(100% - 5px)
 
   input[type="text"]
