--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -215,6 +215,9 @@ input.ts_inputs
 .chat .message.stat:not(:hover)
   opacity: 0.5
 
+#room-view > div.room-renderer.mouse-map > div:nth-child(4)
+  z-index: 2 !important
+
 .section.statslink
   text-align: center !important
 
