--- a/sass/styles/_style.sass
+++ b/sass/styles/_style.sass
@@ -1,4 +1,4 @@
-@import "../mixins/recolor"
+@import "../mixins"
 
 $text: mix(#ffffff, $accent, 40%) !default
 $fade: linear-gradient(to bottom, $accent, darken($accent, 5%)) !default
