--- a/sass/themes/cosmic.sass
+++ b/sass/themes/cosmic.sass
@@ -1,4 +1,4 @@
-$color-bg: #2f2f2f // dark green
+$color-bg: #19132d // dark green
 
 $color-main: #bd9e0e // turntable gold
 $color-snag: #b74e88 // pink
@@ -6,4 +6,4 @@ $color-join: #4a9a4d // green
 $color-left: #a73c3c // red
 $color-mods: #a73c3c // red (removed from decks, etc)
 
-@import "base/theme"
+@import "theme"
