--- a/sass/themes/midnight.sass
+++ b/sass/themes/midnight.sass
@@ -6,4 +6,4 @@ $color-join: #4a9a4d // green
 $color-left: #a73c3c // red
 $color-mods: #a73c3c // red (removed from decks, etc)
 
-@import "base/theme"
+@import "theme"
