Fix select height in options panel.

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -167,6 +167,9 @@ input.ts_inputs
     font-family: monospace
     text-transform: none !important
 
+  select.ts_inputs
+    padding: 7px 10px
+
   .ts_toggle
     padding: 0
     display: block
