--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -149,6 +149,11 @@ input.ts_inputs
 
   h4:not(:first-of-type)
     margin-top: 5px
+
+  small
+    display: block
+    line-height: 15px
+    margin-bottom: 5px
     
   button,
   select,
