--- a/sass/themes/base/_accents.sass
+++ b/sass/themes/base/_accents.sass
@@ -4,10 +4,10 @@ $fade: linear-gradient(to bottom, $color-main, darken($color-main, 5%))
 #pmWindows a,
 #turnStyles h4,
 #topBG #content a,
+#turnStyles .ts_link,
 #turnStyles #ts_menu,
 #turnStyles #ts_close,
 #maindiv .tabbed-panel a,
-#turnStyles .ts_credits a,
 .buddyListRoom .buddyRoomName,
 #turnStyles input:checked + span,
 .chat .message:not(.stat) .subject:hover,
