Use tab instead of header for main pane.

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -1,344 +1,4 @@
-.header-bar
-  z-index: 1
-  font-size: 13px
-  line-height: 42px
-
-  &:hover #turnStyles
-    display: flex
-
-#ts_wrap
-  background: #2f2f2f
-
-#turnStyles
-  display: none
-  color: #eaeaea
-  margin: 0 auto
-  flex-wrap: wrap
-  max-width: 960px
-  line-height: 1em
-  font-weight: bold
-  padding: 10px 20px
-  align-items: center
-
-  &:not(.active)
-    .ts_tab, 
-    #ts_tabs, 
-    .ts_credits,
-    #ts_menu .close
-      display: none
-
-  &.active 
-    display: flex
-
-    #ts_quick
-      display: none
-
-    #ts_menu .open
-      display: none
-
-  #ts_menu
-    margin-right: 10px
-
-    .open,
-    .close
-      display: inline-block
-      vertical-align: bottom
-
-    .open
-      font-size: 1.2em
-      font-weight: bold
-      padding-right: 1px 
-
-    .close
-      font-size: 1em
-      margin-top: 1px
-
-  .ts_menu_toggle
-    color: gold
-    cursor: pointer
-
-  h4
-    color: gold
-    opacity: 0.6
-    font-size: 0.8em
-    text-transform: uppercase
-
-  select
-    -webkit-appearance: none
-    background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>")
-    background-repeat: no-repeat
-    background-position-x: 100%
-    background-position-y: 0
-
-  button
-    background: transparent
-    border: 1px solid rgba(255,255,255,0.2)
-
-  option
-    padding: 5px
-
-  .ts_credits
-    small
-      margin-right: 5px
-
-  .ts_link
-    color: gold
-    text-decoration: none
-    text-transform: uppercase
-
-    &:not(:hover)
-      opacity: 0.75
-
-  .list 
-    font-size: 0.95em
-    line-height: 1.2em
-    
-    .ts_link
-      display: block
-
-#ts_quick .ts_toggle span
-  margin: 0
-
-.ts_toggle,
-.ts_inputs,
-#ts_tabs div,
-  border: none
-  outline: none
-  color: #ffffff
-  cursor: pointer
-  font-size: 0.8em
-  padding: 5px 10px
-  font-weight: bold
-  border-radius: 5px
-  background: #444444
-  text-transform: uppercase
-
-input.ts_inputs,
-button.ts_inputs
-  margin: 3px 5px 5px 0
-  padding: 5px 10px 6px
-
-input.ts_inputs
-  text-transform: none !important
-
-#ts_tabs
-  margin: -5px 0
-
-  div
-    margin: 0 -2px
-    display: inline-block
-
-    &.active
-      color: #2f2f2f
-      background: gold
-    
-    &:not(:first-of-type)
-      border-top-left-radius: 0
-      border-bottom-left-radius: 0
-    
-    &:not(:last-of-type)
-      border-top-right-radius: 0
-      border-bottom-right-radius: 0
-
-.ts_tab
-  flex: 0 0 100%
-  padding: 15px 0
-  line-height: 2em
-
-  .block
-    width: 100%
-    max-width: 250px
-    margin-bottom: 10px
-    vertical-align: top
-    display: inline-block
-  
-  &:not(.active)
-    display: none
-
-  h4:not(:first-of-type)
-    margin-top: 5px
-
-  small
-    display: block
-    line-height: 15px
-    margin-bottom: 5px
-    
-  button,
-  select,
-  input[type="text"]
-    padding: 6px 10px
-    margin: 0 5px 6px 0
-    width: calc(100% - 5px)
-
-  input[type="text"]
-    font-size: 0.9em
-    font-weight: normal
-    box-sizing: border-box
-
-  textarea
-    font-size: 15px
-    font-family: monospace
-    text-transform: none !important
-
-  select.ts_inputs
-    padding: 7px 10px
-
-  .ts_toggle
-    padding: 0
-    display: block
-
-.ts_toggle,
-.ts_inputs
-  margin: 0 5px 5px 0
-  white-space: nowrap
-
-.ts_toggle 
-  input
-    display: none
-
-  span
-    font-size: 3.2em
-    margin: 0 5px 0 9px
-    vertical-align: top
-    display: inline-block
-    color: rgba(#000000, 0.5)
-
-  input:checked + span
-    color: gold
-
-#ts_logs
-  height: 200px
-  display: none
-  overflow: auto
-  font-size: 0.85em
-  font-weight: normal
-  margin-bottom: 40px
-  font-family: monospace
-  padding: 10px 5px 10px 20px
-  background: rgba(0,0,0,0.2)
-
-  span
-    display: block
-    padding-left: 10px
-
-.ts_has_logging #ts_logs
-  display: block
-
-// turntable styling defaults
-#room-view
-  background: #000000
-  
-.chat .message.stat:not(:hover)
-  opacity: 0.5
-
-.section.statslink
-  text-align: center !important
-
-#playlist-display em
-  top: 0
-  right: 25px
-  line-height: 27px
-  position: absolute
-
-// restructure for volume
-.has-volume
-  .header-room
-    width: 100% !important
-    padding: 0 0 0 75px !important
-    > div
-      position: initial !important
-      vertical-align: top !important
-      display: inline-block !important
-      margin: -2px 10px 0 0 !important
-  .dropdown-volume-container
-    display: none !important
-
-#ts_volume
-  top: 0
-  right: 120px
-  width: 160px
-  z-index: 6000
-  user-select: none
-  position: absolute
-
-  &.muted
-    #ts_muted
-      display: inline-block
-    #ts_slider
-      display: none
-    #ts_mute
-      background-position: 0 -316px
-
-  &:not(.muted)
-    #ts_muted
-      display: none
-    #ts_mute
-      background-position: 0 -229px
-
-  #ts_slider, #ts_muted
-    width: 130px
-
-#ts_slider
-  height: 5px
-  outline: none
-  margin-top: -4px
-  background: gold
-  border-radius: 5px
-  -webkit-appearance: none
-
-  &::-webkit-slider-thumb
-    width: 15px
-    height: 15px
-    cursor: pointer
-    border-radius: 50%
-    background: #ffffff
-    appearance: none
-    -webkit-appearance: none
-
-  &::-moz-range-thumb
-    width: 15px
-    height: 15px
-    cursor: pointer
-    border-radius: 50%
-    background: #ffffff
-
-#ts_mute
-  width: 20px
-  height: 20px
-  cursor: pointer
-  margin-right: 5px
-  display: inline-block
-  vertical-align: middle
-  background-size: 35px
-  background-image: url(https://s3.amazonaws.com/assets.turntable.fm/images/sprites/chrome-sprite@2x.png)
-
-#ts_muted
-  color: #ffffff
-  line-height: 1em
-  text-align: left
-  display: inline-block
-
-// replace the upload button
-#ts_upload
-  top: 2px
-  left: 8px
-  width: 21px
-  height: 21px
-  padding: 0px
-  opacity: 0.7
-  border: none
-  margin-top: 5px
-  cursor: pointer
-  position: relative
-  background-size: 38px
-  background-position: 0 -563px
-  background-image: url(https://s3.amazonaws.com/assets.turntable.fm/images/sprites/chrome-sprite@2x.png)
-
-#upload-button
-  display: none
-
-// hide the audience/video
-.ts_hide_videos .screen-content,
-.ts_hide_bubbles .speech-bubble,
-.ts_hide_audience #room-view > canvas:nth-child(4)
-  display: none !important
+@import "sass/core/reset"
+@import "sass/core/panel"
+@import "sass/core/volume"
+@import "sass/core/hidden"
