--- a/sass/themes/base/_tspanel.sass
+++ b/sass/themes/base/_tspanel.sass
@@ -1,30 +1,27 @@
-#ts_wrap,
-#turnStyles
+#ts_panel,
+#ts_hotbar
   @extend %content-main
 
-  input:not(:checked) + span
-    color: $color-bg-0
+#ts_panel
+  label,
+  select,
+  button,
+  input[type="text"]
+    color: $color-text
 
-  small, h5
+  h4,
+  button,
+  h1 small
     color: $color-subtle
 
-  select
+  button
     border-color: $color-bg-4
 
-.ts_toggle,
-.ts_inputs,
-#ts_tabs div
-  color: $color-text 
-  background: $color-bg-3
+  textarea,
+  input[type="text"]
+    background: $color-bg-4
 
-#ts_mute
-  opacity: 0.5
-
-#ts_tabs .active
-  color: $color-bg-0
-
-#ts_volume #ts_slider::-moz-range-thumb
-  background: $color-text
-
-#ts_volume #ts_slider::-webkit-slider-thumb
-  background: $color-text
+#ts_hotbar 
+  label
+    background: $color-bg-4
+  
